# KeenRouterManager

./: .gitignore  CMakeLists.txt  ExportOptions-Release.plist  ExportOptions.plist  Info.plist  README.md
.github/: CI-SETUP.md  README.md
.github/workflows/: build-signed.yml  build.yml  release.yml
KeenRouterManager/: AboutView.swift  AppSettingsStore.swift  AppStorageLocation.swift  AppUIState.swift  ConnectionDiagnosticsView.swift  ContentView.swift  CredentialsStore.swift  DashboardView.swift  InterfaceStrings.json  KeenRouterManagerApp.swift  KeeneticAPIClient.swift  LocalMACAddressProvider.swift  LocalizationManager.swift  MainViewModel.swift  Models.swift  RouterCommands.swift  RouterConfigurationArchive.swift  RouterConfigurationDocument.swift  RouterEditorView.swift  RouterProfileStore.swift  SettingsView.swift  XkeenCommandPresentation.swift  XkeenControlView.swift  XkeenFilePanels.swift  XkeenModels.swift  XkeenSSHClient.swift  XrayReleaseParser.swift  XrayReleaseSelectionView.swift
KeenRouterManager.xcodeproj/: project.pbxproj
KeenRouterManager.xcodeproj/xcshareddata/xcschemes/: KeenRouterManager.xcscheme
docs/: ci-cd.md
resources/: app.icns  language_packs.json
scripts/: package_linux.sh  package_macos.sh  package_windows.ps1
src/: main.cpp  version.h.in
src/core/: ConfigStore.cpp  ConfigStore.h  KeeneticClient.cpp  KeeneticClient.h  Localizer.cpp  Localizer.h  Models.h
src/ui/: AddEditRouterDialog.cpp  AddEditRouterDialog.h  Icons.cpp  Icons.h  MainWindow.cpp  MainWindow.h
src/ui/pages/: ClientsPage.cpp  ClientsPage.h  MePage.cpp  MePage.h  SettingsPage.cpp  SettingsPage.h  VpnPage.cpp  VpnPage.h
